libycp/testsuite/tests/comma.err
[Scanner] tests/comma.ycp:15 Syntax error: syntax error, unexpected ','
