libycp/testsuite/tests/comma.ycp
// comma error test
//
// [Scanner] comma.ycp:15 Parse error: parse error 
//
{
  define func(string a, string b, string c) ``{
  }


  text = text +
"bla blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla blurb
bla blurb blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla
blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla";

  func( "Hello", ,"World");
}
